# CryptoPortfolioTracker

./: .dockerignore  .env.dist  .gitignore  Makefile  docker-compose-test.yml  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/src/cryptoapp/: config.py
backend/src/cryptoapp/application/: activation.py  crypto_transaction.py  get_user_info.py  login.py  register_user.py
backend/src/cryptoapp/application/common/: exceptions.py  interactor.py
backend/src/cryptoapp/application/dto/: data.py  user.py
backend/src/cryptoapp/application/interfaces/: authenticator.py  committer.py  generator.py  hasher.py  id_provider.py  identifier.py  sender.py
backend/src/cryptoapp/application/potrfolio/: crypto_transaction.py  delete.py
backend/src/cryptoapp/application/user/: get_user_info.py  login.py  register_user.py
backend/src/cryptoapp/certs/: jwt-private.pem  jwt-public.pem
backend/src/cryptoapp/domain/: exceptions.py
backend/src/cryptoapp/domain/entities/: asset.py  report.py  transaction.py  user.py
backend/src/cryptoapp/infrastructure/: exceptions.py
backend/src/cryptoapp/infrastructure/database/: setup.py
backend/src/cryptoapp/infrastructure/dto/: common.py  converters.py  data.py  jwt.py  user.py
backend/src/cryptoapp/infrastructure/migrations/: env.py
backend/src/cryptoapp/infrastructure/services/: auth.py  committer.py  confirmation_token.py  generator.py  identifier_service.py  jwt_id_provider.py  jwt_service.py  password_hasher.py  scheduler.py  token_provider.py  uow.py
backend/src/cryptoapp/main/: __init__.py  router_registration.py  routers.py  web.py
backend/src/cryptoapp/main/depedencies/: application.py  core.py  ioc_container.py  main_provider.py
backend/src/cryptoapp/presentation/routers/: __init__.py  exc_handler.py  jwt_auth.py  market_data.py  portfolio.py  root.py  user.py
backend/src/cryptoapp/presentation/schemas/: common.py  cryptocurrency.py  users.py
backend/src/cryptoapp/services/: base.py  coin_market.py  exceptions.py
backend/src/cryptoapp/utils/: constants.py  log.py  time_utils.py
backend/tests/: conftest.py  test_data.py
backend/tests/unit/: test_collect_assets_to_update.py
(+38 files in other folders)
